--- a/about.css
+++ b/about.css
@@ -11,7 +11,14 @@
     background-color: #E5E7EB;
     padding: 5em;
     display: flex;
-    font-size: 26px;
+    font-size: 18px;
+    color: #1F2937;
+
+}
+.contact-main-content h3{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
 }
 
 .title {
@@ -39,7 +46,6 @@
 .contact-main {
     width: 50%;
     padding: 1.5em;
-    display: flex;
     margin-right: auto;
 }
 
