--- a/contact.css
+++ b/contact.css
@@ -1,10 +1,9 @@
 .contact-main-content {
-
-    background-color: #030303;
-    display: flex;
-    padding: 3em 5em;
+    background-color: transparent;
     width: 90%;
-    margin: 3em auto;
+    margin: auto;
+    padding: 3em 5em;
+    display: flex;
 }
 
 .contact-main {
@@ -116,8 +115,13 @@
     font-size: 18px;
     color: #E5E7EB;
 }
+@media screen and (max-width: 1024px) {
+    .contact-title{
+        font-size: 18px;
+    }
+}
 
-@media screen and (max-width:992px) {
+@media screen and (max-width:768px) {
     .contact-main-content {
         flex-direction: column;
         padding: 1em;
@@ -132,4 +136,6 @@
     .contact-hero img {
         height: 100%;
     }
+
+    
 }
