--- a/loginandsignup.css
+++ b/loginandsignup.css
@@ -1,50 +1,48 @@
-.background-image {
-    background-color: #333;
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+.container-login{
+    padding: 2em 0 7.5em 0;
 }
-
-.background-image img {
-    max-width: 100%;
+.container-signup{
+    padding: 2em;
 }
-
-.container {
+form {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 50px;
     width: 50vw;
-    margin: 50px auto;
+    margin: auto;
 }
-
+@media screen and (max-width: 1024px) {
+    .form-footer{
+        flex-direction: column;
+        gap: 10px;
+    }
+}
 @media screen and (max-width:900px) {
-    .container {
+    form {
         width: 60vw;
     }
 }
 
 @media screen and (max-width:800px) {
-    .container {
+    form {
         width: 70vw;
     }
 }
 
 @media screen and (max-width:700px) {
-    .container {
+    form {
         width: 80vw;
     }
 }
 
 @media screen and (max-width:600px) {
-    .container {
+    form {
         width: 90vw;
     }
 }
 
-.container h2 {
+form h2 {
     text-align: center;
     color: #333;
 }
@@ -85,11 +83,9 @@
     background-color: #0056b3;
 }
 
-p {
-    margin-top: 10px;
-}
 
-.main-content {
-    min-height: 80vh;
-    overflow: hidden;
+.form-footer{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
 }
