--- a/about.css
+++ b/about.css
@@ -129,12 +129,11 @@
     background-color: #144492;
 }
 
-.sign-up-container {
-    align-items: center;
-    padding: 2% 0;
+.sign-up-section {
+    padding: 2% 0%;
 }
 
-.sign-up-child-container {
+.sign-up-container {
     background-color: #3882F6;
     padding: 30px 0px;
     border-radius: 5px;
@@ -144,6 +143,19 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.sign-up-title {
+    color: white;
+    letter-spacing: 0px;
+    font-size: 20px;
+}
+
+.sign-up-content {
+    color: white;
+    letter-spacing: 0px;
+    font-size: 15px;
+    margin-right: 50px;
 }
 
 .sign-up-button {
@@ -160,19 +172,6 @@
 
 .sign-up-button:hover {
     background-color: #5090f7;
-}
-
-.sign-up-title {
-    color: white;
-    letter-spacing: 0px;
-    font-size: 20px;
-}
-
-.sign-up-content {
-    color: white;
-    letter-spacing: 0px;
-    font-size: 15px;
-    margin-right: 50px;
 }
 
 @media (max-width:1340px) {
@@ -198,30 +197,56 @@
 }
 
 
-@media screen and (max-width:992px) {
-    .sign-up-title {
-        font-size: 16px
-    }
-
-    .sign-up-content {
-        font-size: 12px;
-        margin-right: auto;
-    }
-
+@media screen and (max-width:998px) {
     .sign-up-right-container {
         display: flex;
         justify-content: center;
         align-items: center;
         padding-left: 5px;
     }
-
+    
     .sign-up-button {
         width: 80px;
+        margin: auto;
     }
+}
+
+@media (max-width: 600px) {
+.sign-up-container {
+    background-color: #3882F6;
+    padding: 30px 0px;
+    border-radius: 5px;
+}
+
+.sign-up-left-container {
+    padding-right: 5px;
+}
+
+.sign-up-title {
+    text-align: center;
+    font-size: 16px;
+}
+
+
+.sign-up-content {
+    margin-right: auto;
+    text-align: center;
+    font-size: 12px;
+}
+
+.sign-up-right-container {
+    padding-left: 5px;
+}
+
+.sign-up-button {
+    width: 80px;
+    margin: auto;
+}
+
 }
 
 @media (max-width:492px) {
     .sign-up-content {
         display: none;
-    }
+}
 }
