--- a/contact.css
+++ b/contact.css
@@ -18,7 +18,7 @@
     height: 40px;
     margin: 10px;
     font-family: 'Roboto', sans-serif;
-    background-color: #19211E;
+    background-color: lightgray;
     border-radius: 10px;
     border-color: #3E4140;
     padding: 10px;
@@ -31,7 +31,7 @@
     height: 150px;
     margin: 10px;
     font-family: 'Roboto', sans-serif;
-    background-color: #19211E;
+    background-color: lightgray;
     border-radius: 10px;
     border-color: #3E4140;
     padding: 10px;
@@ -59,7 +59,8 @@
     border: solid 1px;
     margin: 10px;
     border-radius: 20px;
-    background-color: #19211E;
+    background-color: lightgray;
+    border-color: #3E4140;
     padding: 10px;
 }
 
